--- a/Victor/test/config.config
+++ b/Victor/test/config.config
@@ -1,40 +1,30 @@
 server:
-    server_name: localhost
-    port: 8080
-    ip: 127.0.0.1
-    max_body_size: 4096
+	server_name: localhost
+	port: 8080
+	ip: 127.0.0.1
+	max_body_size: 4096
 
-    # Default error pages
-    error_page:
-        404: /error_pages/404.html
-        500: /error_pages/500.html
+	# Default error pages
+	error_page:
+		404: /error_pages/404.html
+		500: /error_pages/500.html
 
-    # Root directory for the server
-    root: /var/www/html
+	# Root directory for the server
+	root: /var/www/html
 
-    # Routes
-    routes:
-        # Root route
-        - path: /
-          methods: [GET, POST]
-          default_file: index.html
-          directory_listing: off
+	location:
+		path: /
+		methods: [GET, POST]
+		default_file: index.html
+		directory_listing: off
 
-        # Specific route with HTTP methods and redirection
-        - path: /kapouet
-          methods: [GET, POST, PUT]
-          root: /tmp/www/kapouet
-          default_file: index_kapouet.html
-          directory_listing: on
-          redirect:
-              from: /old_kapouet
-              to: /kapouet
-
-        # CGI execution for specific file extensions
-        - path: /cgi-bin
-          methods: [GET, POST]
-          cgi:
-              enabled: true
-              extensions: [.php, .py]
-              handler: /usr/bin/python3 # for Python scripts
+	location:
+		path: /kapouet
+		methods: [GET, POST, PUT]
+		root: /tmp/www/kapouet
+		default_file: index_kapouet.html
+		directory_listing: on
+		redirect:
+			from: /old_kapouet
+			to: /kapouet
 
