--- a/Victor/Production/Makefile
+++ b/Victor/Production/Makefile
@@ -2,7 +2,7 @@
 CXX = g++
 
 # Compiler flags
-CXXFLAGS = #-Wall -Werror -Wextra #-std=c++98
+CXXFLAGS = -Wall -Werror -Wextra -std=c++98
 
 # Name of the executable
 EXEC = my_program
@@ -18,7 +18,7 @@ all: $(EXEC)
 
 # Rule to link the executable
 $(EXEC): $(OBJS)
-	$(CXX) $(CXXFLAGS) -o $@ $^ -fsanitize=address
+	$(CXX) $(CXXFLAGS) -o $@ $^  -fsanitize=address 
 
 # Rule for object files from cpp files
 %.o: %.cpp
