--- a/Victor/Production/config.config
+++ b/Victor/Production/config.config
@@ -1,5 +1,5 @@
 server:
-	server_name: localhost
+server_name: localhost
 	port: 8080
 	ip: 127.0.0.1
 	max_body_size: 4096
@@ -30,3 +30,6 @@ server:
 		redirect:
 			from: /old_kapouet
 			to: /kapouet
+
+server:
+	server_name: test
