--- a/FX/config.config
+++ b/FX/config.config
@@ -32,7 +32,7 @@ server:
 			to: /kapouet
 
 server:
-	server_name: myHostName
+	server_name: myhostname
 	port: 8880
 	ip: 127.0.0.1
 	max_body_size: 4096
