--- a/FX/config/config.config
+++ b/FX/config/config.config
@@ -1,16 +1,16 @@
 server:
 	server_name: localhost
 	port: 8888
-	ip: 127.0.0.1
+	ip: 129.0.0.1
 	max_body_size: 500
 
 	# Default error pages
 	error_page:
-		404: /error_pages/404.html
-		500: /error_pages/500.html
+		404: www/error_pages/404.html
+		500: www/error_pages/500.html
 
 	# Root directory for the server
-	root: /var/www/html
+	root: www/
 
 	location:
 		path: /
@@ -18,21 +18,8 @@ server:
 		default_file: index.html
 		directory_listing: off
 
-	location:
-		path: /test
-
-	location:
-		path: /kapouet
-		methods: [GET, POST, PUT]
-		root: /tmp/www/kapouet
-		default_file: index_kapouet.html
-		directory_listing: on
-		redirect:
-			from: /old_kapouet
-			to: /kapouet
-
 server:
-	server_name: myhostname
+	server_name: myHostName
 	port: 8880
 	ip: 127.0.0.1
 	max_body_size: 4096
