Error reading from socket

--- a/FX/config/config.config
+++ b/FX/config/config.config
@@ -19,10 +19,10 @@ server:
 		directory_listing: off
 
 server:
-	server_name: myHostName
+	server_name: myhostname
 	port: 8880
 	ip: 127.0.0.1
-	max_body_size: 4096
+	max_body_size: 3000000
 
 	# Default error pages
 	error_page:
