--- a/Final_Project/config/config.config
+++ b/Final_Project/config/config.config
@@ -14,13 +14,13 @@ server:
 
 	location:
 		path: /
-		methods: [GET, POST]
+		methods: GET, POST
 		default_file: index.html
 		directory_listing: off
 
 server:
 	server_name: myHostName
-	port: 8880
+	port: 8888
 	ip: 127.0.0.1
 	max_body_size: 4096
 
@@ -34,7 +34,7 @@ server:
 
 	location:
 		path: /
-		methods: [GET, POST]
+		methods: GET, POST, DELETE
 		default_file: index.html
 		directory_listing: off
 
@@ -43,7 +43,7 @@ server:
 
 	location:
 		path: /kapouet
-		methods: [GET, POST, PUT]
+		methods: GET, POST, PUT
 		root: /tmp/www/kapouet
 		default_file: index_kapouet.html
 		directory_listing: on
