--- a/Laura/FX/config/config.config
+++ b/Laura/FX/config/config.config
@@ -2,15 +2,15 @@ server:
 	server_name: localhost
 	port: 8888
 	ip: 127.0.0.1
-	max_body_size: 500
+	max_body_size: 5000
 
 	# Default error pages
 	error_page:
-		404: /error_pages/404.html
-		500: /error_pages/500.html
+		404: www/error_pages/404.html
+		500: www/error_pages/500.html
 
 	# Root directory for the server
-	root: /var/www/html
+	root: web
 
 	location:
 		path: /
@@ -18,24 +18,11 @@ server:
 		default_file: index.html
 		directory_listing: off
 
-	location:
-		path: /test
-
-	location:
-		path: /kapouet
-		methods: [GET, POST, PUT]
-		root: /tmp/www/kapouet
-		default_file: index_kapouet.html
-		directory_listing: on
-		redirect:
-			from: /old_kapouet
-			to: /kapouet
-
 server:
-	server_name: myHostName
+	server_name: myhostname
 	port: 8880
 	ip: 127.0.0.1
-	max_body_size: 4096
+	max_body_size: 3000000
 
 	# Default error pages
 	error_page:
