--- a/FX/config/config.config
+++ b/FX/config/config.config
@@ -1,8 +1,8 @@
 server:
-	server_name: localhost
+	server_name: domain0
 	port: 8888
 	ip: 127.0.0.1
-	max_body_size: 5000
+	max_body_size: 300000
 
 	# Default error pages
 	error_page:
@@ -19,9 +19,9 @@ server:
 		directory_listing: off
 
 server:
-	server_name: myhostname
+	server_name: domain1
 	port: 8880
-	ip: 127.0.0.1
+	ip: 169.254.19.77
 	max_body_size: 3000000
 
 	# Default error pages
@@ -50,3 +50,14 @@ server:
 		redirect:
 			from: /old_kapouet
 			to: /kapouet
+
+	location:
+		path: /kapouet
+		methods: [GET, POST, PUT]
+		root: /tmp/www/kapouet
+		default_file: index_kapouet.html
+		directory_listing: on
+		redirect:
+			from: pomme.html
+			to: poire.html
+
