--- a/Final_Project/config/config.config
+++ b/Final_Project/config/config.config
@@ -2,7 +2,7 @@ server:
 	server_name: localhost
 	port: 8888
 	ip: 127.0.0.1
-	max_body_size: 500
+	max_body_size: 300000
 
 	# Default error pages
 	error_page:
@@ -19,8 +19,8 @@ server:
 		directory_listing: off
 
 server:
-	server_name: myHostName
-	port: 8888
+	server_name: mdjf
+	port: 8880
 	ip: 127.0.0.1
 	max_body_size: 4096
 
