--- a/Final_Project/config/config.config
+++ b/Final_Project/config/config.config
@@ -14,7 +14,7 @@ server:
 
 	location:
 		path: /
-		methods: GET, POST
+		methods: POST, GET, DELETE
 		default_file: index.html
 		directory_listing: off
 
