--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,8 @@
 		"typeinfo": "cpp",
 		"unordered_map": "cpp",
 		"utility": "cpp",
-		"vector": "cpp"
+		"vector": "cpp",
+		"list": "cpp",
+		"filesystem": "cpp"
 	}
 }
