checked request & response init

--- a/Final_Project/config/config.config
+++ b/Final_Project/config/config.config
@@ -14,7 +14,7 @@ server:
 
 	location:
 		path: /
-		methods: POST, GET, DELETE
+		methods: POST, DELETE
 		default_file: index.html
 		directory_listing: off
 
