--- a/config/config.config
+++ b/config/config.config
@@ -26,8 +26,8 @@ server:
 
 	# Default error pages
 	error_page:
-		404: /error_pages/404.html
-		500: /error_pages/500.html
+		404: website0/error_pages/404.html
+		500: website0/error_pages/500.html
 
 	# Root directory for the server
 	root: /var/www/html
