--- a/config/config.config
+++ b/config/config.config
@@ -15,8 +15,10 @@ server:
 	location:
 		path: /
 		methods: POST, DELETE, GET
-		default_file: index.html
 		directory_listing: off
+		redirect:
+			from: /
+			to: /error_pages/505.html
 
 server:
 	server_name: mdjf
