--- a/config/config.config
+++ b/config/config.config
@@ -17,8 +17,15 @@ server:
 		methods: POST, DELETE, GET
 		directory_listing: off
 		redirect:
-			from: /
-			to: /error_pages/505.html
+			from: /home.html
+			to: /index.html
+	location:
+		path: /test
+		methods: POST, DELETE, GET
+		directory_listing: off
+		redirect:
+			from: /testhome.html
+			to: /index.html
 
 server:
 	server_name: mdjf
