--- a/config/config.config
+++ b/config/config.config
@@ -6,19 +6,20 @@ server:
 
 	# Default error pages
 	error_page:
-		404: www/error_pages/404.html
-		500: www/error_pages/500.html
+		404: /error_pages/404.html
+		500: /error_pages/500.html
 
 	# Root directory for the server
 	root: web/website0
 
 	location:
-		path: /img2
+		path: /
 		methods: POST, DELETE, GET
 		directory_listing: off
 		redirect:
 			from: /home.html
 			to: /index.html
+
 	location:
 		path: /test
 		methods: POST, DELETE, GET
