--- a/config/config.config
+++ b/config/config.config
@@ -13,7 +13,7 @@ server:
 	root: web/website0
 
 	location:
-		path: /img2
+		path: /
 		methods: POST, DELETE, GET
 		directory_listing: off
 		redirect:
