test new branch

--- a/config/config.config
+++ b/config/config.config
@@ -16,6 +16,4 @@ server:
 		path: /
 		methods: POST, DELETE, GET
 		directory_listing: off
-		redirect:
-			from: /
-			to: /index.html
+		redirect:	/index.html
