Redirection reworks and seems ok

--- a/config/config.config
+++ b/config/config.config
@@ -8,6 +8,7 @@ server:
 	error_page:
 		404: /error_pages/404.html
 		500: /error_pages/500.html
+		505: /error_pages/505.html
 
 	# Root directory for the server
 	root: web/website0
@@ -16,4 +17,8 @@ server:
 		path: /
 		methods: POST, DELETE, GET
 		directory_listing: off
-		redirect:	/index.html
+		redirect: /index.html
+
+	location:
+		path: /home.html
+		redirect: /index.html
