--- a/config/website0.config
+++ b/config/website0.config
@@ -33,8 +33,8 @@ server:
 		methods: POST, DELETE, GET
 		directory_listing: off
 		redirect:
-			from: /kapouet
-			to: /error_pages/505.html
+			from: /kapouet/test.txt
+			to: /error_pages/404.html
 
 	location:
 		path: /poire
