CGI in progress

--- a/config/config.config
+++ b/config/config.config
@@ -6,10 +6,11 @@ server:
 
 	# Default error pages
 	error_page:
+		400: /error_pages/400.html
 		403: /error_pages/403.html
 		404: /error_pages/404.html
-		500: /error_pages/500.html
-		505: /error_pages/505.html
+		502: /error_pages/502.html
+		503: /error_pages/503.html
 
 	# Root directory for the server
 	root: web/website0
@@ -24,3 +25,8 @@ server:
 	location:
 		path: /home.html
 		redirect: /index.html
+
+	location:
+		path: /home.html
+		redirect: /index.html
+
