--- a/config/website0.config
+++ b/config/website0.config
@@ -1,13 +1,16 @@
 server:
-	server_name: website0
+	server_name: localhost
 	port: 8888
 	ip: 127.0.0.1
 	max_body_size: 300000
 
 	# Default error pages
 	error_page:
+		400: /error_pages/400.html
 		403: /error_pages/403.html
 		404: /error_pages/404.html
+		502: /error_pages/502.html
+		503: /error_pages/503.html
 
 	# Root directory for the server
 	root: web/website0
@@ -16,31 +19,69 @@ server:
 		path: /
 		methods: POST, DELETE, GET
 		directory_listing: off
-		redirect:
-			from: /home.html
-			to: /index.html
+
+		redirect: /index.html
 
 	location:
-		path: /test
-		methods: POST, DELETE, GET
-		directory_listing: off
-		redirect:
-			from: /testhome.html
-			to: /index.html
+		path: /home.html
+		redirect: /index.html
 
 	location:
-		path: /img
-		methods: POST, DELETE, GET
-		directory_listing: off
-		redirect:
-			from: /kapouet/test.txt
-			to: /error_pages/404.html
+		path: /home.html
+		redirect: /index.html
+
+server:
+	server_name: website0_NO_error_page
+	port: 8880
+	ip: 127.0.0.1
+	max_body_size: 300000
+
+	# Root directory for the server
+	root: web/website0
 
 	location:
-		path: /poire
+		path: /
 		methods: POST, DELETE, GET
 		directory_listing: off
-		redirect:
-			from: /kapouet
-			to: /error_pages/505.html
 
+		redirect: /index.html
+
+	location:
+		path: /home.html
+		redirect: /index.html
+
+	location:
+		path: /home.html
+		redirect: /index.html
+
+server:
+	server_name: website0_NO_GET
+	port: 8800
+	ip: 127.0.0.1
+	max_body_size: 300000
+
+	# Default error pages
+	error_page:
+		400: /error_pages/400.html
+		403: /error_pages/403.html
+		404: /error_pages/404.html
+		502: /error_pages/502.html
+		503: /error_pages/503.html
+
+	# Root directory for the server
+	root: web/website0
+
+	location:
+		path: /
+		methods: POST, DELETE
+		directory_listing: off
+
+		redirect: /index.html
+
+	location:
+		path: /home.html
+		redirect: /index.html
+
+	location:
+		path: /home.html
+		redirect: /index.html
