--- a/config/config.config
+++ b/config/config.config
@@ -20,13 +20,10 @@ server:
 		methods: POST, DELETE, GET
 		directory_listing: off
 
-		redirect: /index.html
-
 	location:
 		path: /home.html
-		redirect: /index.html
+		methods: POST, DELETE, GET
+		directory_listing: off
 
-	location:
-		path: /home.html
-		redirect: /index.html
+
 
