--- a/config/config.config
+++ b/config/config.config
@@ -15,18 +15,15 @@ server:
 	# Root directory for the server
 	root: web/website0
 
-	location:
-		path: /
-		methods: POST, DELETE, GET
-		directory_listing: off
-
-		redirect: /index.html
 
 	location:
 		path: /home.html
 		redirect: /index.html
-
+		methods: GET, POST, DELETE
+	
 	location:
-		path: /home.html
-		redirect: /index.html
+		path: /index.html
+		methods: GET, POST, DELETE
+
+
 
