little improvement with the MIME type

--- a/config/test_redirection.config
+++ b/config/test_redirection.config
@@ -15,17 +15,25 @@ server:
 	# Root directory for the server
 	root: web/website0
 
-
 	location:
 		path: /
 		methods: POST, DELETE, GET
 		directory_listing: off
-
+	
 	location:
 		path: /home.html
 		methods: POST, DELETE, GET
-		directory_listing: off
+		redirect: /index.html
 
+	location:
+		path: /img
+		methods: POST, DELETE, GET
+		redirect: /index.html
+
+	location:
+		path: /test
+		methods: POST, DELETE, GET
+		redirect: /index.html
 
 
 
