--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,7 @@
 		"utility": "cpp",
 		"vector": "cpp",
 		"list": "cpp",
-		"filesystem": "cpp"
+		"filesystem": "cpp",
+		"__memory": "cpp"
 	}
 }
