Lot of details modified

--- a/config/website2.config
+++ b/config/website2.config
@@ -20,12 +20,26 @@ server:
 		methods: POST, DELETE, GET
 		directory_listing: off
 
-		redirect: /index.html
+
+
+server:
+	server_name: poire
+	port: 8880
+	ip: 127.0.0.1
+	max_body_size: 300000
+
+	# Default error pages
+	error_page:
+		400: /error_pages/400.html
+		403: /error_pages/403.html
+		404: /error_pages/404.html
+		502: /error_pages/502.html
+		503: /error_pages/503.html
+
+	# Root directory for the server
+	root: web/website2
 
 	location:
-		path: /home.html
-		redirect: /index.html
-
-	location:
-		path: /home.html
-		redirect: /index.html
+		path: /
+		methods: POST, DELETE, GET
+		directory_listing: off
