--- a/config/config.config
+++ b/config/config.config
@@ -1,5 +1,5 @@
 server:
-	server_name: localhost
+	server_name: poire
 	port: 8888
 	ip: 127.0.0.1
 	max_body_size: 300000
@@ -7,10 +7,6 @@ server:
 	# Default error pages
 	error_page:
 		400: /error_pages/400.html
-		403: /error_pages/403.html
-		404: /error_pages/404.html
-		502: /error_pages/502.html
-		503: /error_pages/503.html
 
 	# Root directory for the server
 	root: web/website0
