--- a/config/config.config
+++ b/config/config.config
@@ -30,12 +30,12 @@ server:
 	location:
 		path: /img
 		methods: POST, DELETE, GET
-		redirect: /index.html
+		directory_listing: on
 
 	location:
 		path: /test
 		methods: POST, DELETE, GET
-		redirect: /index.html
+		directory_listing: on
 
 
 
