--- a/config/config.config
+++ b/config/config.config
@@ -10,13 +10,10 @@ server:
 
 	# Root directory for the server
 	root: web/website0
-
-	default_file: /default.html
 	
 	location:
 		path: /
 		methods: POST, DELETE, GET
-		directory_listing: off
 	
 	location:
 		path: /home.html
@@ -26,12 +23,12 @@ server:
 	location:
 		path: /img
 		methods: POST, DELETE, GET
-		redirect: /index.html
+		directory_listing: off
 
 	location:
 		path: /test
 		methods: POST, DELETE, GET
-		redirect: /index.html
+		directory_listing: on
 
 
 
