fixed directory child links

--- a/config/website0.config
+++ b/config/website0.config
@@ -1,8 +1,9 @@
 server:
 	server_name: localhost
 	port: 8888
-	ip: 10.11.1.6
+	ip: 127.0.0.1
 	max_body_size: 300000
+	default_file: /default.html
 
 	# Default error pages
 	error_page:
@@ -31,6 +32,7 @@ server:
 		redirect: /index.html
 
 server:
+	default_file: /default.html
 	server_name: website0_NO_error_page
 	port: 8880
 	ip: 127.0.0.1
@@ -55,6 +57,7 @@ server:
 		redirect: /index.html
 
 server:
+	default_file: /default.html
 	server_name: website0_NO_GET
 	port: 8800
 	ip: 127.0.0.1
