--- a/config/config.config
+++ b/config/config.config
@@ -4,6 +4,8 @@ server:
 	ip: 127.0.0.1
 	max_body_size: 300000
 
+	default_file: /default.html
+
 	# Default error pages
 	error_page:
 		400: /error_pages/400.html
@@ -14,6 +16,8 @@ server:
 	location:
 		path: /
 		methods: POST, DELETE, GET
+		directory_listing: on
+
 	
 	location:
 		path: /home.html
