--- a/config/correction.config
+++ b/config/correction.config
@@ -3,6 +3,7 @@ server:
 	port: 8888
 	ip: 127.0.0.1
 	max_body_size: 300000
+	default_file: /default.html
 
 	# Default error pages
 	error_page:
@@ -18,7 +19,7 @@ server:
 	location:
 		path: /
 		methods: POST, DELETE, GET
-		directory_listing: off
+		directory_listing: on
 	
 	location:
 		path: /home.html
@@ -27,13 +28,9 @@ server:
 
 	location:
 		path: /img
-		methods: POST, DELETE, GET
-		redirect: /index.html
+		methods: POST, DELETE
 
 	location:
 		path: /test
 		methods: POST, DELETE, GET
-		redirect: /index.html
-
-
-
+		directory_listing: on
