--- a/config/config.config
+++ b/config/config.config
@@ -27,7 +27,7 @@ server:
 	location:
 		path: /img
 		methods: POST, DELETE, GET
-		directory_listing: on
+		directory_listing: off
 
 	location:
 		path: /test
