DELETE file function added

--- a/config/config.config
+++ b/config/config.config
@@ -15,23 +15,27 @@ server:
 	
 	location:
 		path: /
+		methods: POST, GET
+		directory_listing: on
+
+	location:
+		path: /uploads
 		methods: POST, DELETE, GET
 		directory_listing: on
 
-	
 	location:
 		path: /home.html
-		methods: POST, DELETE, GET
+		methods: POST, GET
 		redirect: /index.html
 
 	location:
 		path: /img
-		methods: POST, DELETE, GET
+		methods: POST, GET
 		directory_listing: off
 
 	location:
 		path: /test
-		methods: POST, DELETE, GET
+		methods: POST, GET
 		directory_listing: on
 
 
