Redirections a reparer / std::cout inutiles à enlever /MAKEFILE a modifier

--- a/config/little_max_body_size.config
+++ b/config/little_max_body_size.config
@@ -2,35 +2,38 @@ server:
 	server_name: localhost
 	port: 8888
 	ip: 127.0.0.1
-	max_body_size: 300000
+	max_body_size: 30
+
 	default_file: /default.html
 
 	# Default error pages
 	error_page:
 		400: /error_pages/400.html
-		403: /error_pages/403.html
-		404: /error_pages/404.html
-		502: /error_pages/502.html
-		503: /error_pages/503.html
 
 	# Root directory for the server
 	root: web/website0
-
-	location:
-		path: /
-		methods: POST, DELETE, GET
-		directory_listing: on
 	
 	location:
-		path: /home.html
+		path: /
+		methods: POST, GET
+		directory_listing: on
+
+	location:
+		path: /uploads
 		methods: POST, DELETE, GET
+		directory_listing: on
+
+	location:
+		path: /home.html
+		methods: POST, GET
 		redirect: /index.html
 
 	location:
 		path: /img
-		methods: POST, DELETE
+		methods: POST, GET
+		directory_listing: off
 
 	location:
 		path: /test
-		methods: POST, DELETE, GET
+		methods: POST, GET
 		directory_listing: on
