--- a/config/config.config
+++ b/config/config.config
@@ -16,7 +16,8 @@ server:
 	location:
 		path: /
 		methods: POST, GET
-		directory_listing: on
+		directory_listing: off
+		redirect: /service.html
 
 	location:
 		path: /uploads
@@ -32,6 +33,7 @@ server:
 		path: /img
 		methods: POST, GET
 		directory_listing: off
+		redirect: /index.html
 
 	location:
 		path: /test
