--- a/config/config.config
+++ b/config/config.config
@@ -16,7 +16,7 @@ server:
 	location:
 		path: /
 		methods: POST, GET
-		directory_listing: off
+		redirect: /index.html
 
 	location:
 		path: /uploads
