--- a/config/config.config
+++ b/config/config.config
@@ -8,11 +8,11 @@ server:
 
 	# Default error pages
 	error_page:
-		400: /error_pages/400.html
+		404: /error_pages/404.html
 
 	# Root directory for the server
 	root: web/website0
-	
+
 	location:
 		path: /
 		methods: POST, GET
@@ -37,7 +37,7 @@ server:
 	location:
 		path: /test
 		methods: POST, GET
-		directory_listing: on
+		directory_listing: off
 
 
 
